# IMLCV

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.MD  README.md  README.rst  conftest.py  container.def  install  install.sh  install_hpc.sh  interactive_job.sh  launch_commands.txt  list.txt  log.txt  makefile  mpitest.sh  nohup.out  pixi_cpu.sh  pixi_rocm.sh  profile.py  pyproject.toml  pythonfunction.py  run.sh  run_hpc.sh  setup.cfg  setup.py  test.out  test.save  test.sh  (+4 more)
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  lint.yml  pytest.yml  python-publish.yml
IMLCV/: MD.py  Snakefile  __init__.py  log.py  scheme.py
IMLCV/base/: CV.py  CVDiscovery.py  MdEngine.py  Observable.py  __init__.py  bias.py  hwsetup.py  metric.py  rounds.py  run_md.py  tools.py
IMLCV/base/tools/: _rbf_interp.py  _rbfinterp_pythran.py  bessel_callback.py  grid_interpolator.py  soap_kernel.py
IMLCV/bash_apps/: MD.py  plot_bias.py
IMLCV/examples/: CsPbI3.py  alanine_dipeptide_CV_disc.py  cv_determination.py  example_systems.py  replot.py  simul.py  simul_prompts.txt
IMLCV/examples/data/CsPbI_3/2x2x2/: cp2k.inp  min_struc_Csdelta.xyz  min_struc_FAdelta.xyz  min_struc_gamma.xyz
IMLCV/examples/data/CsPbI_3/small/: Pos.xyz  phase2.poscar
IMLCV/examples/yaff/: .gitignore  main.py  stats
IMLCV/implementations/: CV.py  CvDiscovery.py  MdEngine.py  bias.py
IMLCV/implementations/tensorflow/: CV.py
IMLCV/launch/FireWorks/: fireworks_findings.txt
IMLCV/launch/parsl_conf/: bash_app_python.py  config.py  test.py  test_python_bash.py
IMLCV/snakemake/workflow/: Snakefile
IMLCV/test/: common.py  err_test.py  get_output.sh  jax_test.py  mpitest.py  mplot.py  parsl_test.py  popen.py  soap_kernel.py  soap_test.py  test.py  test_CV.py  test_CV_disc.py  test_hpc.py  test_md_yaff.py  test_openMM.py  test_scheme.py  tf2jax.py
IMLCV/test/cython/: cpickle.c  cpickle.pyx  setup.py  test.py
IMLCV/test/data/CsPbI_3/: cp2k.inp  perovskites.txt
IMLCV/test/data/CsPbI_3/Libraries/: BASIS_SETS
IMLCV/test/data/CsPbI_3/large/: cp2k.inp
IMLCV/test/data/CsPbI_3/small/: cp2k.inp
IMLCV/test/fireworks/: test_jobflow.py
IMLCV/test/fw/: start_mongodb.sh  test_jobflow.py
IMLCV/tools/: _rbf_interp.py  bessel_callback.py  soap_kernel.py
configs/: bash_app_python.py  config_general.py  hpc_ugent.py  local_htex.py  local_threadpool.py  vsc_hortense.py  vsc_stevin.py
docs/: Installation.md  Makefile  conf.py  index.md  index.rst  notebook_link.nblink  notebooks.md  philosophy.md  requirements.txt
docs/_static/css/: theme.css
docs/source/: IMLCV.base.rst  IMLCV.examples.rst  IMLCV.external.HPC_ugent.rst  IMLCV.external.parsl_conf.rst  IMLCV.external.rst  IMLCV.rst  IMLCV.test.rst  Installation.md  conf.py  index.md  index.rst  modules.rst  requirements.txt  updatelibdoc.py
docs/source/_static/css/: theme.css
examples/: CsPbI3.py  cv_determination.py  example_systems.py  replot.py  simul.py  simul_prompts.txt
examples/data/CsPbI_3/1x1x1/: Pos.xyz  zeta.xyz
examples/data/CsPbI_3/2x2x2/: Application_form_Tier-1_Compute_2023_final.docx  cp2k.inp
examples/data/CsPbI_3/4x4x4/: Pos.xyz
examples/data/CsPbI_3/Libraries/: BASIS_SETS
notebooks/: CsPbI3.ipynb  CsPbI3_2.ipynb  ala.ipynb  alanine_dipeptide_LDA.ipynb  muller_brown.ipynb  plot.ipynb  test.py  toy_periodic.ipynb
plot_app/: stderr  stdout
scripts/: initialize_simulation.py  replot.py
src/: CV.py  CVDiscovery.py  MdEngine.py  Observable.py
src/IMLCV/: __init__.py  scheme.py
src/IMLCV/base/: CV.py  CVDiscovery.py  MdEngine.py  Observable.py  UnitsConstants.py  bias.py  covariances.py  dataobjects.py  dataset.py  datastructures.py  decoratros.py  koopman.py  plot.py  reweight.py  rounds.py
src/IMLCV/configs/: bash_app_python.py  cluster.py  config_general.py  hpc_ugent.py  local_threadpool.py
src/IMLCV/data/: main.py
src/IMLCV/data/CsPbI_3/: perovskites.txt
src/IMLCV/data/CsPbI_3/1x1x1/: cp2k.inp  phase2.poscar
src/IMLCV/data/CsPbI_3/4x4x4/: cp2k.inp
src/IMLCV/data/butane/: butane.psf  par_all35_ethers.prm  top_all35_ethers.rtf
src/IMLCV/data/cyclohexane/: boat.xyz  chair.xyz  cyclohexane_system.xml
src/IMLCV/data/system_1/: MACE.pth  initial_dataset_ethene_to_ethoxide.xyz
src/IMLCV/data/system_2/: start_umb.xyz
src/IMLCV/examples/: example_systems.py  replot.py  simul.py  test.h5
src/IMLCV/implementations/: CV.py  CvDiscovery.py  MdEngine.py  bias.py  energy.py
src/IMLCV/implementations/tensorflow/: CV.py  CvDiscovery.py  __init__.py
src/IMLCV/new_yaff/: ff.py  iterative.py  npt.py  nvt.py  system.py  utils.py  verlet.py
src/IMLCV/tools/: _rbf_interp.py  _rbfinterp_pythran.py  bessel_callback.py  bessel_jn.py  grid_interpolator.py  pcglasso.py  soap_kernel.py  spherical_bessel.py  tools.py
src/imlcv/: __init__.py
src/new_yaff/: ff.py  iterative.py  npt.py  nvt.py  system.py  utils.py  verlet.py
test/: main.py  test_CV.py
test/openMM/: main.py
test/yaff/: main.py  md_ext.xyz  process.py
test/yaff2/: main.py
tests/: conftest.py  test_CV.py  test_bash_app_python.py  test_bias.py  test_cv_determination.py  test_descriptors.py  test_example_systems.py  test_io.py  test_sheme.py  test_skeleton.py  test_tf2jax.py
workdir/: schaling.py
