

[tool.ruff]

extend-include = ["*.ipynb"]
line-length = 120

#lint.select = ["ALL"]
#lint.ignore = ["E741","ERA001"]
lint.extend-select = ["I"]


[tool.pyright]
include = [
    "src",
    "tests"
]
typeCheckingMode = "basic"



[tool.pdm]
distribution = true
package-dir = "src"

[project]
name = "IMLCV"
version = "0.1.0"
description = "Add a short description here!"
authors = [
    {name = "David Devoogdt", email = "david.devoogdt@ugent.be"},
    {name = "David Devoogdt", email = "david.devoogdt@gmail.com"},
]


dependencies = [ "cloudpickle",
    "filelock",
    "importlib-metadata",
    "matplotlib",
    "openmm",
    "ase",
    "distrax",
    "dm-haiku",
    "flax",
    "h5py",
    "hsluv",
    "jaxopt",
    "jsonpickle",
    "optax",
    "ott-jax",
    "parsl",
    "umap-learn",
    "work-queue",
    "mace-torch",
   "openmmforcefields@git+https://github.com/openmm/openmmforcefields.git", "memory-profiler>=0.61.0,<0.62",
]



readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/DavidDevoogdt/IMLCV"
Documentation = "https://imlcv.readthedocs.io/en/main/?badge=main"
Source = "https://github.com/DavidDevoogdt/IMLCV"
Changelog = "https://github.com/DavidDevoogdt/IMLCV/latest/changelog.html"




[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

testpaths = [
    "tests",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jax = "*"
jaxlib = "*"
torch = "*"

IMLCV = { path = ".", editable = true }

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cpu"]


[tool.pixi.feature.rocm.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/rocm6.4"]

[tool.pixi.feature.cuda13.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]

[tool.pixi.feature.cuda12.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]


[tool.pixi.feature.rocm.pypi-dependencies]

# https://github.com/ROCm/jax/releases/download/rocm-jax-v0.7.1/jaxlib-0.7.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl

jax = "==0.7.1"
jax-rocm7-pjrt  = "==0.7.1"
jax-rocm7-plugin = "==0.7.1"
jaxlib = { url = "https://github.com/ROCm/jax/releases/download/rocm-jax-v0.7.1/jaxlib-0.7.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" }

[tool.pixi.feature.cuda13.pypi-dependencies]

jax = { extras = ["cuda13"], version = "*" }
cuequivariance-ops-torch-cu13  = "*"
cuequivariance   = "*"
cuequivariance-torch  = "*"


[tool.pixi.feature.cuda12.pypi-dependencies]

jax = { extras = ["cuda12"], version = "*" }
cuequivariance-ops-torch-cu12  = "*"
cuequivariance   = "*"
cuequivariance-torch  = "*"


# Environments (cpu is default; add rocm variants too)
[tool.pixi.environments]
cpu  = { features = [] }
rocm      = { features = ["rocm"] }
cuda13    = { features = ["cuda13"] }
cuda12    = { features = ["cuda12"] }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ruff = ">=0.14.5,<0.15"
jupyter = ">=1.1.1,<2"
pre-commit = ">=4.4.0,<5"
ndcctools = ">=7.15.14,<8"
pytest = ">=9.0.1,<10"
