

[tool.ruff]

extend-include = ["*.ipynb"]
line-length = 120

#lint.select = ["ALL"]
#lint.ignore = ["E741","ERA001"]
lint.extend-select = ["I"]


[tool.pyright]
include = [
    "src",
    "tests"
]
typeCheckingMode = "basic"



[tool.pdm]
distribution = true
package-dir = "src"

[project]
name = "IMLCV"
version = "0.1.0"
description = "Add a short description here!"
authors = [
    {name = "David Devoogdt", email = "david.devoogdt@ugent.be"},
    {name = "David Devoogdt", email = "david.devoogdt@gmail.com"},
]


dependencies = [ "cloudpickle",
    "filelock",
    "importlib-metadata",
    "matplotlib",
    "openmm",
    "ase",
    "distrax",
    "dm-haiku",
    "flax",
    "h5py",
    "hsluv",
    "jaxopt",
    "jsonpickle",
    "optax",
    "ott-jax",
    "parsl",
    "umap-learn",
    "work-queue",
    "mace-torch",
    "grain",
    "e3nn-jax>=0.20.8,<0.21",
]



readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/DavidDevoogdt/IMLCV"
Documentation = "https://imlcv.readthedocs.io/en/main/?badge=main"
Source = "https://github.com/DavidDevoogdt/IMLCV"
Changelog = "https://github.com/DavidDevoogdt/IMLCV/latest/changelog.html"




[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

testpaths = [
    "tests",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jax = "*"
jaxlib = "*"
torch = "*"

IMLCV = { path = ".", editable = true }

# there is a problem with mace-jax, where the mace_jax.adapters subfolder is not included in the package, so we need to install it from git
# this repo is added as a submodule in the external folder, so we can install it from there
mace_jax = {path="./external/mace_jax", editable=true }


[tool.pixi.pypi-options]
extra-index-urls = [
    "https://download.pytorch.org/whl/cpu",
    ]




[tool.pixi.feature.cuda13.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]

[tool.pixi.feature.cuda12.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]


[tool.pixi.feature.rocm6.pypi-dependencies]

#latest rocm6 release
jax = {version="==0.4.31" }
jaxlib = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.4/jaxlib-0.4.31-cp312-cp312-manylinux_2_28_x86_64.whl" }
jax-rocm60-pjrt = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.4/jax_rocm60_pjrt-0.4.31-py3-none-manylinux_2_28_x86_64.whl" }
jax-rocm60-plugin = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.4/jax_rocm60_plugin-0.4.31-cp312-cp312-manylinux_2_28_x86_64.whl" }


[tool.pixi.feature.rocm7.pypi-dependencies]

#https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/jax-install.html#install-jax-on-bare-metal-or-a-custom-container

jax =  "==0.6.0"
jaxlib =  "==0.6.0"
jax-rocm7-pjrt =  {url="https://repo.radeon.com/rocm/manylinux/rocm-rel-7.0/jax_rocm7_pjrt-0.6.0-py3-none-manylinux_2_28_x86_64.whl"}
jax-rocm7-plugin = {url="https://repo.radeon.com/rocm/manylinux/rocm-rel-7.0/jax_rocm7_plugin-0.6.0-cp312-cp312-manylinux_2_28_x86_64.whl"}



[tool.pixi.feature.cuda13.pypi-dependencies]

jax = { extras = ["cuda13"], version = "*" }
cuequivariance-ops-torch-cu13  = "*"
cuequivariance   = "*"
cuequivariance-torch  = "*"


[tool.pixi.feature.cuda12.pypi-dependencies]

jax = { extras = ["cuda12"], version = "*" }
cuequivariance-ops-torch-cu12  = "*"
cuequivariance   = "*"
cuequivariance-torch  = "*"


# Environments (cpu is default; add rocm variants too)
[tool.pixi.environments]
cpu  = { features = [] }
rocm6      = { features = ["rocm6"] }
rocm7     = { features = ["rocm7"] }
cuda13    = { features = ["cuda13"] }
cuda12    = { features = ["cuda12"] }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
ruff = "*"
jupyter = "*"
pre-commit = "*"
ndcctools = "*"
pytest = "*"
