[metadata]
name = IMLCV
description = Add a short description here!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidDevoogdt/IMLCV
author = David Devoogdt
author_email = david.devoogdt@gmail.com
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://imlcv.readthedocs.io/en/main/?badge=main
    Source = https://github.com/DavidDevoogdt/IMLCV
    Changelog =https://github.com/DavidDevoogdt/IMLCV/latest/changelog.html

[options]
packages = find_namespace:
install_requires =
    ase
    cloudpickle
    distrax
    filelock
    flax
    h5py
    importlib-metadata
    jax
    jax-dataclasses
    jaxopt
    keras
    matplotlib
    molmod
    netket
    numba
    numpy>=1.16.5
    optax
    ott-jax
    parsl
    pymanopt
    scipy>=1.7.2
    tensorflow
    thermolib@git+https://github.ugent.be/lvduyfhu/ThermoLIB@david
    umap-learn
    yaff@git+https://github.com/molmod/yaff.git
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where =
    src

[options.extras_require]
docs =
    myst-parser
    sphinx
    sphinx-autoapi
    sphinx-autodoc-typehints
    sphinx-book-theme
    sphinx-design
lint =
    black
    flake8
    isort
    mypy
    shed
test =
    mpi4py
    pytest
    pytest-cov
    setuptools

[options.package_data]
mypkg =
    data/**/*
zip_safe = False

[tool:pytest]
addopts =
    --cov IMLCV --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 120
extend_ignore =
    E203,
    E266,
    E501,
    W503,
    F403,
    F401
    E741
exclude =
    .tox
    .venv
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = IMLCV
extensions =
    github_actions
    markdown
    pre_commit
