[metadata]
name = IMLCV
description = Add a short description here!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidDevoogdt/IMLCV
author = David Devoogdt
author_email = david.devoogdt@gmail.com
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://imlcv.readthedocs.io/en/main/?badge=main
    Source = https://github.com/DavidDevoogdt/IMLCV
    Changelog =https://github.com/DavidDevoogdt/IMLCV/latest/changelog.html

[options]
packages = find_namespace:

install_requires =
    ase>=3.22.1
    cloudpickle>=2.2.1
    distrax>=0.1.3
    filelock>=3.12.0
    flax>=0.6.10
    h5py>=3.8.0
    hsluv
    importlib-metadata>=6.6.0
    jax==0.4.13
    jax-dataclasses>=1.5.1
    jaxopt>=0.6
    keras>=2.11.0
    matplotlib==3.7
    molmod>=1.4.8
    netket>=3.8
    numba>=0.56.4
    # numpy==1.24.4
    optax>=0.1.4
    ott-jax>=0.3.1
    parsl==2023.8.14
    pymanopt@git+https://github.com/pymanopt/pymanopt.git
    # scipy>=1.9.0
    tensorflow==2.12
    thermolib@git+https://github.ugent.be/lvduyfhu/ThermoLIB@david
    umap-learn>=0.5.3
    yaff@git+https://github.com/molmod/yaff.git
    work_queue
python_requires = ==3.10.*
include_package_data = True
package_dir =
    =src

[options.packages.find]
where =
    src

[options.extras_require]
docs =
    myst-parser
    nbsphinx
    nbsphinx-link
    pandoc
    sphinx
    sphinx-autoapi
    sphinx-autodoc-typehints
    sphinx-book-theme
    sphinx-design
lint =
    black
    flake8
    isort
    mypy
    shed
test =
    mpi4py
    pytest
    pytest-cov
    setuptools

[options.package_data]
mypkg =
    data/**/*
zip_safe = False

[tool:pytest]
addopts =
    --cov IMLCV --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 120
extend_ignore =
    E203,
    E266,
    E501,
    W503,
    F403,
    F401
    E741
exclude =
    .tox
    .venv
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = IMLCV
extensions =
    github_actions
    markdown
    pre_commit
